# tensor-fusion

./: .dockerignore  .gitignore  .releaserc  CLAUDE.md  Makefile  README.md  dependabot.yml  go.mod  go.sum  index.yaml  plan.md
.claude-plugin/: marketplace.json  plugin.json
.cursor/rules/: requirement.mdc
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot-prs.yml  codeql.yml  lint.yml  release-api.yml  release-helm.yml  release.yml  test-e2e.yml  test.yml
TODO/: support-dedicated-gpu.md
api/: go.mod  go.sum
api/v1/: clientprofile_types.go  constants.go  gpu_types.go  gpunode_funcs.go  gpunode_types.go  gpunodeclaim_types.go  gpupool_types.go  gpuresourcequota_types.go  providerconfig_types.go  schedulingconfigtemplate_types.go  tensorfusioncluster_funcs.go  tensorfusioncluster_types.go  tensorfusionconnection_types.go  tensorfusionworkload_types.go  workloadprofile_types.go  zz_generated.deepcopy.go
charts/tensor-fusion/: Chart.yaml  values-amd.yaml  values-multi-vendor.yaml  values.schema.json  values.yaml
cmd/: main.go
cmd/hypervisor/: main.go
cmd/hypervisor-tui/: main.go
cmd/nodediscovery/: main.go  main_test.go
cmd/sched/: setup.go  setup_test.go
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  manager_config_patch.yaml
config/manager/: kustomization.yaml
config/rbac/: role.yaml
config/samples/: ascend-partition-runtimeclass-deployment.yaml  ascend-provider.yaml  ascend-runtimeclass.yaml  dynamic-config.yaml  gang-scheduling-workloads.yaml  gpu-info-config.yaml  kustomization.yaml  ppu-provider.yaml  provider-ascend.yaml  provider-mthreads.yaml  provider-nvidia.yaml  pytorch.yaml  scheduler-config.yaml  tensorfusioncluster-ascend.yaml  tensorfusioncluster-mthreads.yaml  tensorfusioncluster-multi-vendor.yaml  tensorfusioncluster-nvidia.yaml  tensorfusioncluster-ppu.yaml  v1_gpunodeclaim.yaml  v1_gpupool.yaml  v1_gpuresourcequota.yaml  v1_providerconfig.yaml  v1_tensorfusioncluster.yaml  v1_tensorfusionconnection.yaml
design/: DRA_USER_GUIDE.md  DRA_USER_GUIDE_CN.md  DRA_USER_GUIDE_EN.md  annotations_spec_en.md  annotations_spec_zh.md  constants_guide.md  constants_guide_en.md  constants_guide_zh.md  gpu_expansion_logic_zh.md  gputopo_scheduler_design_cn.md  labels_spec_en.md  labels_spec_zh.md  nvlink_topology_scheduler_mvp_zh.md
dockerfile/: amd-provider.Dockerfile  hypervisor.Dockerfile  node-discovery.Dockerfile  operator.Dockerfile
docs/: QUICKSTART-AMD-DOCKER.md  STORAGE-REQUIREMENTS.md  amd-bare-metal-testing.md  amd-gpu-setup.md  cross-vendor-test-matrix.md  installation-guide.md  v1-to-v2-upgrade-best-practice.md
hack/: sync-helm-rbac.sh
internal/alert/: alert_suite_test.go  api.go  api_test.go  evaluator.go  evaluator_test.go  rules.go
internal/autoscaler/: autoscaler.go  autoscaler_suite_test.go  autoscaler_test.go  estimator.go  metricsprovider.go  metricsprovider_test.go  recommendation.go  recommender.go  recommender_test.go  workerstate.go  workload_metrics_loader.go  workload_metrics_loader_test.go  workloadstate.go  workloadstate_test.go
internal/autoscaling/: workerstate.go  workloadstate.go  workloadstate_test.go
internal/cloudprovider/: provisioner.go
internal/component/: client.go  component.go  component_test.go  hypervisor.go  worker.go
internal/config/: global_config.go  global_config_test.go  gpu_info.go  gpupool_mock.go  rules.go  scheduler_config.go  template_identifier.go
internal/constants/: constants.go  env.go  vendors.go
internal/controller/: fake_node_claim_contoller.go  fake_node_claim_contoller_test.go  gpu_controller.go  gpu_controller_test.go  gpunode_controller.go  gpunode_controller_extra_env_test.go  gpunode_controller_name_test.go  gpunode_controller_test.go  gpunode_controller_unit_test.go  gpunode_crash_recovery_unit_test.go  gpunodeclaim_controller.go  gpunodeclaim_controller_test.go  gpupool_compaction_controller.go  gpupool_controller.go  gpupool_controller_test.go  gpupool_defrag.go  gpupool_defrag_test.go  gpupool_node_provision.go  gpuresourcequota_controller.go  node_controller.go  node_controller_test.go  node_controller_unit_test.go  pod_controller.go  pod_controller_test.go  providerconfig_controller.go  providerconfig_controller_test.go  suite_test.go  tensorfusioncluster_controller.go  tensorfusionconnection_controller.go  tensorfusionconnection_controller_test.go  tensorfusionworkload_controller.go  tensorfusionworkload_controller_test.go  tensorfusionworkload_status_unit_test.go
internal/gang/: manager.go  manager_stage_cd_test.go  manager_test.go  types.go  workload_status.go  workload_target.go
internal/gpuallocator/: capacity_drift_unit_test.go  get_allocation_info_unit_test.go  gpuallocator.go  gpuallocator_suite_test.go  gpuallocator_test.go  node_capacity.go  node_capacity_unit_test.go  partition_strategy.go  partition_template_race_test.go  partitioned_ascend_test.go  partitioned_scheduling.go  partitioned_scheduling_test.go  quota_consolidated_test.go  rollback_unit_test.go  strategy_compact_first.go  strategy_default.go  (+2 more)
patches/: scheduler-csi-capacity-1.patch  scheduler-csi-capacity-2.patch  scheduler-csi-capacity-3.patch  scheduler-pdb-1.patch  scheduler-pdb-2.patch  scheduler-sched-one.patch
provider/: Makefile  README.md  accelerator.h  limiter.h  meson.build  meson_options.txt  test_dlopen_twice.cpp
provider/amd/: accelerator.c
provider/ascend/: accelerator.c  accelerator.cpp  dcmi_wrapper.h
provider/ascend/tests/: test_ascend.cpp  test_ascend_comprehensive.cpp  test_ascend_debug.cpp  test_dcmi_direct.cpp  test_logic_id_probe.cpp
provider/example/: accelerator.c
provider/example/device_mock/: app_mock.c  driver_mock.c  driver_mock.h  test_metrics.c  test_rate_limit.c
provider/stub/: accelerator.c
provider/test/: ascend_partition_fake.c  test_accelerator.c
scripts/: benchmark.sh  generate-crd.sh  inject-libs.sh  patch-scheduler.sh  run-local-hypervisor.sh  uninstall.sh
upgrade-validation/: v1升级须知.md
(+366 files in other folders)
